--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "license": "MIT",
   "author": {
@@ -11,7 +11,7 @@
     "Metallicus"
   ],
   "scripts": {
-    "build": "tsc --build tsconfig.json",
+    "build": "tsup src/index.ts",
     "clean-build": "rm -rf dist && yarn build",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "prepublish": "yarn clean-build",
@@ -58,6 +58,7 @@
     "jest": "^28.1.0",
     "ts-jest": "^28.0.2",
     "tslint": "^6.1.3",
+    "tsup": "^6.6.3",
     "typescript": "^4.6.4"
   },
   "repository": {
