--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/index.js",
   "license": "MIT",
   "author": {
@@ -11,7 +11,7 @@
     "Metallicus"
   ],
   "scripts": {
-    "build": "tsup src/index.ts",
+    "build": "tsup src/index.ts --dts --format esm,cjs,iife",
     "clean-build": "rm -rf dist && yarn build",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "prepublish": "yarn clean-build",
