--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.4",
-  "main": "dist/index.js",
+  "version": "0.1.5",
+  "main": "dist/index.mjs",
   "license": "MIT",
   "author": {
     "name": "Metallicus",
@@ -11,7 +11,7 @@
     "Metallicus"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --dts --format esm,cjs,iife",
+    "build": "tsup src/index.ts --dts --format esm",
     "clean-build": "rm -rf dist && yarn build",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "prepublish": "yarn clean-build",
