--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "main": "dist/index.js",
   "license": "MIT",
   "author": {
@@ -11,7 +11,7 @@
     "Metallicus"
   ],
   "scripts": {
-    "build": "tsc --build tsconfig.json",
+    "build": "tsup src/index.ts",
     "clean-build": "rm -rf dist && yarn build",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "prepublish": "yarn clean-build",
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "^7.17.9",
+    "@swc/core": "^1.3.35",
     "@types/elliptic": "^6.4.14",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.32",
