--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "main": "dist/index.js",
   "license": "MIT",
   "author": {
@@ -56,7 +56,9 @@
     "@types/elliptic": "^6.4.14",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.32",
+    "@web/dev-server-rollup": "^0.3.21",
     "jest": "^28.1.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "ts-jest": "^28.0.2",
     "tslint": "^6.1.3",
     "tsup": "^6.6.3",
