--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "main": "dist/index.js",
   "license": "MIT",
   "author": {
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "^7.17.9",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@swc/core": "^1.3.35",
     "@types/elliptic": "^6.4.14",
     "@types/jest": "^27.5.0",
