--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "main": "dist/index.js",
   "license": "MIT",
   "author": {
@@ -26,6 +26,7 @@
     "encoding": "^0.1.13",
     "eosio-signing-request": "^2.5.0",
     "eosjs": "^22.1.0",
+    "inherits": "^2.0.4",
     "universal-authenticator-library": "0.3.0",
     "utf-8-validate": "^5.0.10"
   },
@@ -61,6 +62,7 @@
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.32",
     "@web/dev-server-rollup": "^0.3.21",
+    "esbuild-plugin-polyfill-node": "^0.1.4",
     "jest": "^28.1.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "ts-jest": "^28.0.2",
