--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@proton/ual-webauth",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "main": "dist/index.js",
   "license": "MIT",
+  "type": "module",
   "author": {
     "name": "Metallicus",
     "url": "https://metallicus.com"
